test/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-gateway
  namespace: test-ns
  labels:
    app: test-gateway-label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-gateway-label
  template:
    metadata:
      labels:
        app: test-gateway-label
    spec:
      containers:
      - name: test-gateway
        image: localhost/gateway:t1
        ports:
        - containerPort: 8080
