test/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: test-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: codify-test.duckdns.org
      http:
        paths:
          - path: /gateway(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: test-gateway-svc
                port:
                  number: 80
