test/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-gateway-svc
  namespace: test-ns
spec:
  selector:
    app: test-gateway-label
  ports:
  - name: test-gateway-port
    port: 80
    targetPort: 8080
  type: NodePort
